<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.soft.useraccounts.ui.account.AccountsViewModel"/>
        <variable
            name="viewModel"
            type="AccountsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="@dimen/_16sdp"
        android:background="@drawable/layout_account"
        tools:context=".ui.account.AccountsFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_title"
            android:textColor="@color/blue_xd"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/input_name"
            style="@style/input_name"
            android:layout_marginTop="@dimen/_16sdp"
            android:hint="@string/text_hint_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.926"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/input_user"
            style="@style/input_user"
            android:hint="@string/text_hint_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_name" />

        <EditText
            android:id="@+id/input_pass"
            style="@style/input_pass"
            android:hint="@string/text_hint_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_user" />


        <EditText
            android:id="@+id/input_description"
            style="@style/input_description"
            android:hint="@string/text_hint_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_pass" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_description">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_account"
                style="@style/bt_account"
                android:background="@drawable/layout_bottom_save"
                android:text="@string/text_save" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_delete"
                style="@style/bt_delete"
                android:background="@drawable/layout_bottom_delete"
                android:text="@string/text_delete" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>