...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_account"
        tools:context=".ui.accountList.AccountListFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_accounts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_4sdp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_accounts" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddAccounts"
            style="@style/style_fab"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
...
